modular_sensor_actuator/build/log/idf_py_stdout_output_173468
Command: ninja all
[1/10] Building C object esp-idf/my_hal/CMakeFiles/__idf_my_hal.dir/esp32/esp32.c.obj
FAILED: esp-idf/my_hal/CMakeFiles/__idf_my_hal.dir/esp32/esp32.c.obj 
/home/mike/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.1-dev-3669-gc32c7152ef-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/config -I/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/my_hal/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_libc/platform_include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/config/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/config/include/freertos -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/config/xtensa/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/mike/CodeProjects/ESP32/esp-idf/components/freertos/esp_additions/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/include/soc -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/ldo/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/debug_probe/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/etm/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/mspi/mspi_timing_tuning/tuning_scheme_impl/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/mspi/mspi_intr/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/power_supply/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/modem/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/port/esp32/. -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hw_support/port/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/heap/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/heap/tlsf -I/home/mike/CodeProjects/ESP32/esp-idf/components/log/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/esp32 -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/soc/esp32/register -I/home/mike/CodeProjects/ESP32/esp-idf/components/hal/platform_port/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/hal/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/hal/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_rom/esp32 -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_common/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_system/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_system/port/soc -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_system/port/include/private -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_stdio/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/xtensa/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/xtensa/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/xtensa/deprecated_include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_gpio/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_gpio/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_usb/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_pmu/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_pmu/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_regi2c/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_regi2c/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_ana_conv/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_dma/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_i2s/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_hal_i2s/esp32/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/include/apps -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/lwip/src/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/freertos/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/esp32xx/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/mike/CodeProjects/ESP32/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_timer/include -I/home/mike/CodeProjects/ESP32/esp-idf/components/esp_driver_gpio/include @"/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator=. -fmacro-prefix-map=/home/mike/CodeProjects/ESP32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/my_hal/CMakeFiles/__idf_my_hal.dir/esp32/esp32.c.obj -MF esp-idf/my_hal/CMakeFiles/__idf_my_hal.dir/esp32/esp32.c.obj.d -o esp-idf/my_hal/CMakeFiles/__idf_my_hal.dir/esp32/esp32.c.obj -c /home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/my_hal/esp32/esp32.c
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/my_hal/esp32/esp32.c: In function 'esp32_log_info':
/home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/components/my_hal/esp32/esp32.c:122:14: error: comparison is always false due to limited range of data type [-Werror=type-limits]
  122 |     if(level == -1)
      |              ^~
cc1: all warnings being treated as errors
[2/10] Performing build step for 'bootloader'
[1/1] cd /home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/bootloader && /home/mike/.espressif/python_env/idf6.1_py3.12_env/bin/python /home/mike/CodeProjects/ESP32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/mike/CodeProjects/Portfolio/embedded/modular_sensor_actuator/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
